--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "mocha": "2.2.5",
     "salinity": "0.0.8",
     "supertest": "0.15.0"
+  },
+  "resolutions": {
+    "**/request/tough-cookie": "2.4.3"
   }
 }
