--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
  },
  "scripts": {
   "start": "node lib/index.js",
-  "test": "mocha",
+  "test": "mocha --exit",
   "lint": "jshint"
  },
  "repository": "https://github.com/tidepool-org/seagull.git",
