Audit level: moderate

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,5 +46,5 @@ services:
 script:
   - npm run lint
   - npm test
-  - npm audit --registry=https://registry.npmjs.org --production
+  - npm audit --registry=https://registry.npmjs.org --production --audit-level=moderate
   - ./artifact.sh
