PT-1192 Don't make blip crash when a user is deleted but present in gatekeeper (#12)
* PT-1192 Don't make blip crash when a user is deleted but present in gatekeeper
- Allow to specify a log level
- Optimise docker build (was paintfull to test)

* Update npm

* Set a default valut to SEAGULL_API_LOGLEVEL

* Audit level: moderate

* Bump version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "seagull",
- "version": "0.3.1",
+ "version": "0.3.2",
  "description": "API for managing user metadata.",
  "main": "lib/index.js",
  "directories": {
@@ -8,7 +8,7 @@
  },
  "scripts": {
   "start": "node lib/index.js",
-  "test": "mocha",
+  "test": "mocha --exit",
   "lint": "jshint"
  },
  "repository": "https://github.com/tidepool-org/seagull.git",
