--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
   - 10.15.3
 
 install:
+  - npm install -g npm@latest
   - npm install
 
 addons:
@@ -45,5 +46,5 @@ services:
 script:
   - npm run lint
   - npm test
-  - npm audit --registry=https://registry.npmjs.org --production
+  - npm audit --registry=https://registry.npmjs.org --production --audit-level=moderate
   - ./artifact.sh
