PT-1449 Add SOUP generation

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,14 @@ node_js:
   - 10.15.3
 
 env:
-  jobs:
+  global:
     - BUILD_OPENAPI_DOC=true
+    - BUILD_SOUP=true
 
 install:
   - npm install -g npm@latest
   - npm install
+  - npm install --save-dev ci-toolbox@latest
 
 addons:
   apt:
@@ -50,8 +52,20 @@ deploy:
     region: $AWS_DEFAULT_REGION
     bucket: com.diabeloop.yourloops.doc
     skip_cleanup: true
-    local_dir: doc
+    local_dir: doc/openapi
     upload-dir: openapi/seagull
+    cache_control: "max-age=21600"
+  # Deploy SOUP list
+  - provider: s3
+    on:
+      tags: true
+    access_key_id: $AWS_ACCESS_KEY_ID
+    secret_access_key: $AWS_SECRET_ACCESS_KEY
+    region: $AWS_DEFAULT_REGION
+    bucket: com.diabeloop.yourloops.doc
+    skip_cleanup: true
+    local_dir: doc/soup
+    upload-dir: soup/seagull
     cache_control: "max-age=21600"
 
 services:
