--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,14 @@ env:
     - BUILD_OPENAPI_DOC=true
     - BUILD_SOUP=true
 
+before_install:
+  # MongoDb 4.2 docker container
+  - docker container run -d -p 27017:27017 mongo:4.2
+
 install:
   - npm install -g npm@latest
   - npm install
   - npm install --save-dev ci-toolbox@latest
-
-addons:
-  apt:
-    sources:
-      - mongodb-3.6-trusty
-    packages:
-      - mongodb-org-server
 
 deploy:
   # Control deployment by setting a value for `on`. Setting the `branch`
@@ -70,7 +67,6 @@ deploy:
 
 services:
   - docker
-  - mongodb
 
 script:
   - npm run lint
