--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   "bunyan": "1.8.12",
   "crypto-js": "3.1.8",
   "hakken": "0.2.1",
-  "lodash": "4.17.15",
+  "lodash": "4.17.20",
   "mongojs": "3.1.0",
   "request": "2.88.0",
   "restify": "8.3.3",
   "restify-errors": "8.0.0",
   "tidepool-gatekeeper": "0.2.5",
-  "user-api-client": "0.5.1"
+  "user-api-client": "0.5.2-rc1"
  },
  "devDependencies": {
   "grunt": "1.0.4",
