--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
     region: $AWS_DEFAULT_REGION
-    bucket: com.diabeloop.yourloops.doc
+    bucket: com.diabeloop.backloops.docs
     skip_cleanup: true
     local_dir: doc/openapi
     upload-dir: openapi/seagull
@@ -62,7 +62,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
     region: $AWS_DEFAULT_REGION
-    bucket: com.diabeloop.yourloops.doc
+    bucket: com.diabeloop.backloops.docs
     skip_cleanup: true
     local_dir: doc/soup
     upload-dir: soup/seagull
