--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "seagull",
- "version": "0.4.4",
+ "version": "0.4.5",
  "description": "API for managing user metadata.",
  "main": "lib/index.js",
  "directories": {
@@ -12,7 +12,7 @@
   "lint": "jshint",
   "prebuild-doc": "mkdir -p doc/openapi",
   "prebuild-soup": "mkdir -p doc/soup",
-  "build-doc": "swagger-jsdoc -o doc/openapi/${npm_package_name}-${npm_package_version}-swagger.json -d swaggerDef.js lib/*.js",
+  "build-doc": "./buildDoc.sh ${npm_package_name} ${npm_package_version}",
   "build-soup": "release-helper gen-dep-report doc/soup/${npm_package_name}-${npm_package_version}-soup.md"
  },
  "repository": "https://github.com/tidepool-org/seagull.git",
