--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
  "dependencies": {
   "amoeba": "0.8.1",
   "async": "3.1.0",
+  "axios": "^0.21.1",
   "bunyan": "1.8.12",
   "crypto-js": "3.1.8",
   "hakken": "0.2.1",
   "lodash": "4.17.20",
   "mongojs": "3.1.0",
-  "request": "2.88.0",
   "restify": "8.3.3",
   "restify-errors": "8.0.0",
-  "tidepool-gatekeeper": "0.2.5",
+  "tidepool-gatekeeper": "0.3.0-rc2",
   "user-api-client": "0.5.2"
  },
  "devDependencies": {
@@ -42,7 +42,9 @@
   "grunt-shell-spawn": "0.4.0",
   "jshint": "2.10.2",
   "mocha": "6.2.0",
-  "salinity": "0.0.8",
+  "chai": "4.3.0",
+  "sinon": "9.2.4",
+  "sinon-chai": "3.5.0",
   "supertest": "4.0.2",
   "swagger-jsdoc": "^4.2.0"
  }
