--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "seagull",
- "version": "0.4.5",
+ "version": "0.5.0",
  "description": "API for managing user metadata.",
  "main": "lib/index.js",
  "directories": {
@@ -20,16 +20,15 @@
  "license": "BSD-2-Clause",
  "dependencies": {
   "amoeba": "0.8.1",
-  "async": "3.1.0",
   "axios": "^0.21.1",
   "bunyan": "1.8.12",
   "crypto-js": "3.1.8",
   "hakken": "0.2.1",
   "lodash": "4.17.20",
-  "mongojs": "3.1.0",
+  "mongojs": "git://github.com/mongo-js/mongojs.git#df1fb99",
   "restify": "8.3.3",
   "restify-errors": "8.0.0",
-  "tidepool-gatekeeper": "0.3.0-rc2",
+  "tidepool-gatekeeper": "0.3.0",
   "user-api-client": "0.5.2"
  },
  "devDependencies": {
