--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
  "scripts": {
   "start": "node lib/index.js",
   "test": "mocha --exit",
+  "test-ci": "JUNIT_REPORT_PATH=test-report.xml mocha --reporter mocha-jenkins-reporter --exit",
   "lint": "jshint",
+  "build-ci": "npm install && npm run lint && npm run security-checks",
   "prebuild-doc": "mkdir -p doc/openapi",
   "prebuild-soup": "mkdir -p doc/soup",
-  "build-doc": "./buildDoc.sh ${npm_package_name} ${npm_package_version}",
-  "build-soup": "release-helper gen-dep-report doc/soup/${npm_package_name}-${npm_package_version}-soup.md"
+  "build-doc": "swagger-jsdoc -d swaggerDef.js lib/*.js",
+  "build-soup": "release-helper gen-dep-report doc/soup/${npm_package_name}-${npm_package_version}-soup.md",
+  "security-checks": "npm audit --production --registry=https://registry.npmjs.org/ --production --audit-level=moderate"
  },
  "repository": "https://github.com/tidepool-org/seagull.git",
  "author": "Tidepool",
@@ -32,6 +35,7 @@
   "user-api-client": "0.5.2"
  },
  "devDependencies": {
+  "chai": "4.3.0",
   "grunt": "1.0.4",
   "grunt-cli": "1.3.2",
   "grunt-contrib-jshint": "2.1.0",
@@ -41,7 +45,7 @@
   "grunt-shell-spawn": "0.4.0",
   "jshint": "2.10.2",
   "mocha": "6.2.0",
-  "chai": "4.3.0",
+  "mocha-jenkins-reporter": "^0.4.2",
   "sinon": "9.2.4",
   "sinon-chai": "3.5.0",
   "supertest": "4.0.2",
